--- a/TheForestDedicatedServerManager/Views/HomePageView.xaml
+++ b/TheForestDedicatedServerManager/Views/HomePageView.xaml
@@ -1,5 +1,5 @@
 ﻿<UserControl
-    x:Class="TheForestDedicatedServerManager.Views.HomePageViewModel"
+    x:Class="TheForestDedicatedServerManager.Views.HomePageView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -13,23 +13,6 @@
             <Setter Property="Margin" Value="0,0,0,10" />
             <Setter Property="Height" Value="30" />
             <Setter Property="Width" Value="175" />
-        </Style>
-        <Style x:Key="TextBoxStyle" TargetType="TextBox">
-            <Style.Triggers>
-                <Trigger Property="Validation.HasError" Value="True">
-                    <Setter Property="ToolTip" Value="{Binding (Validation.Errors)[0].ErrorContent, RelativeSource={x:Static RelativeSource.Self}}" />
-                    <Setter Property="Validation.ErrorTemplate">
-                        <Setter.Value>
-                            <ControlTemplate>
-                                <Label
-                                    Margin="122,-6,0,0"
-                                    Content="*"
-                                    Foreground="Red" />
-                            </ControlTemplate>
-                        </Setter.Value>
-                    </Setter>
-                </Trigger>
-            </Style.Triggers>
         </Style>
     </UserControl.Resources>
 
@@ -78,10 +61,10 @@
                     HorizontalAlignment="Left"
                     Content="Shutdown time: " />
                 <TextBox
+                    Style="{StaticResource TextBoxStyle}"
                     Width="125"
                     Margin="4,-5,0,0"
                     HorizontalAlignment="Left"
-                    Style="{StaticResource TextBoxStyle}"
                     Text="{Binding ShutdownTime, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}" />
                 <StackPanel Width="174" Orientation="Horizontal">
                     <Label Content="Shutdown machine:" />
