--- a/TheForestDedicatedServerManager/Views/HomePageView.xaml
+++ b/TheForestDedicatedServerManager/Views/HomePageView.xaml
@@ -28,13 +28,28 @@
             VerticalAlignment="Top"
             DockPanel.Dock="Left"
             Orientation="Vertical">
-            <StackPanel Orientation="Horizontal">
+            <DockPanel LastChildFill="False">
                 <Label HorizontalContentAlignment="Right" Content="Server Status:" />
                 <Rectangle
                     Width="20"
                     Height="18"
                     Fill="{Binding ServerStatusColour}" />
-            </StackPanel>
+                <Button
+                    Width="20"
+                    Height="19"
+                    Margin="0,0,5,0"
+                    HorizontalAlignment="Right"
+                    Command="{Binding EditSetupCommand}"
+                    DockPanel.Dock="Right">
+                    <Button.Content>
+                        <Image
+                            Width="18"
+                            Height="11"
+                            Source="..\Images\settings.png" />
+                    </Button.Content>
+                </Button>
+
+            </DockPanel>
             <Button
                 Command="{Binding StartServerCommand}"
                 Content="Start Server"
@@ -69,11 +84,6 @@
                 <Label Content="Shutdown machine:" />
                 <CheckBox Height="15" IsChecked="{Binding IsMachineShutdown, UpdateSourceTrigger=PropertyChanged}" />
             </StackPanel>
-            <Button
-                Width="75"
-                Margin="0,10,0,0"
-                Command="{Binding EditSetupCommand}"
-                Content="Edit Setup" />
         </StackPanel>
         <TextBox
             Height="366"
