Updated to the latest version of PrismBase

--- a/TheForestDedicatedServerManager/App.xaml
+++ b/TheForestDedicatedServerManager/App.xaml
@@ -14,7 +14,7 @@
             <Setter Property="TextWrapping" Value="NoWrap" />
             <Style.Triggers>
                 <Trigger Property="Validation.HasError" Value="True">
-                    <Setter Property="ToolTip" Value="{Binding (Validation.Errors)[0].ErrorContent, RelativeSource={x:Static RelativeSource.Self}}" />
+                    <Setter Property="ToolTip" Value="{Binding (Validation.Errors)/ErrorContent, RelativeSource={x:Static RelativeSource.Self}}" />
                 </Trigger>
             </Style.Triggers>
         </Style>
