--- a/TheForestDSM/Views/SetupView.xaml
+++ b/TheForestDSM/Views/SetupView.xaml
@@ -4,9 +4,10 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
     Title="{Binding Title}"
     Width="572.988"
-    Height="169.017"
+    Height="225.351"
     Background="WhiteSmoke"
     ResizeMode="NoResize"
     WindowStartupLocation="CenterScreen"
@@ -45,6 +46,7 @@
             VerticalAlignment="Top"
             Command="{Binding BrowseCommand}"
             Content="Browse" />
+
         <Label
             Width="213"
             Margin="15,57,0,0"
@@ -60,15 +62,54 @@
             VerticalAlignment="Top"
             Style="{StaticResource TextBoxStyle}"
             Text="{Binding Config.ServerArguments, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}" />
+
+        <Label
+            Width="213"
+            Margin="15,95,0,0"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Top"
+            HorizontalContentAlignment="Right"
+            Content="Refresh interval (seconds):" />
+        <xctk:IntegerUpDown
+            Width="127"
+            Height="22"
+            Margin="228,95,0,0"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Top"
+            Increment="1"
+            Maximum="60"
+            Minimum="1"
+            ToolTip="Minimum refresh interval is 1 second and maximum is 60 seconds"
+            Value="{Binding Config.RefreshIntervalInSeconds, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}" />
+        <!--<TextBox
+            Width="216"
+            Height="22"
+            Margin="228,95,0,0"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Top"
+            Style="{StaticResource TextBoxStyle}"
+            Text="{Binding Config.RefreshIntervalInSeconds, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True, StringFormat={}{0:#}}" />-->
+        <TextBlock
+            Width="Auto"
+            Height="Auto"
+            Margin="369,100,0,0"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Top">
+            <Hyperlink Command="{Binding RefreshIntervalInfoCommand}">
+                What is this?
+            </Hyperlink>
+        </TextBlock>
+
         <Button
-            Margin="164,101,0,0"
+            Margin="164,144,0,0"
             HorizontalAlignment="Left"
             VerticalAlignment="Top"
             Command="{Binding SaveSetupCommand}"
             Content="Save"
+            IsDefault="True"
             Style="{StaticResource WindowButton}" />
         <Button
-            Margin="302,101,0,0"
+            Margin="302,144,0,0"
             HorizontalAlignment="Left"
             VerticalAlignment="Top"
             Command="{Binding CancelSetupCommand}"
