--- a/TheForestDSM/Dialogs/MessageDialog.xaml
+++ b/TheForestDSM/Dialogs/MessageDialog.xaml
@@ -1,5 +1,5 @@
 ﻿<Window
-    x:Class="TheForestDSM.Dialogs.InfoDialog"
+    x:Class="TheForestDSM.Dialogs.MessageDialog"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -18,10 +18,10 @@
 
         <DockPanel x:Name="InfoDialogDockPanel" Margin="10">
             <Image
+                x:Name="DialogImage"
                 Width="50"
                 HorizontalAlignment="Left"
-                VerticalAlignment="Top"
-                Source="..\Images\info.png" />
+                VerticalAlignment="Top" />
 
             <StackPanel x:Name="InfoDialogStackPanel" Margin="10,0,10,0">
                 <TextBlock
