--- a/TheForestDSM/Dialogs/MessageDialog.xaml
+++ b/TheForestDSM/Dialogs/MessageDialog.xaml
@@ -28,14 +28,23 @@
                     x:Name="ContentBox"
                     Width="{Binding ContentBoxWidth}"
                     TextWrapping="Wrap" />
-                <Button
-                    Width="80"
-                    Height="30"
-                    Margin="-45,10,0,0"
-                    VerticalAlignment="Bottom"
-                    Click="OkButton_Click"
-                    Content="Ok"
-                    IsDefault="True" />
+                <DockPanel Margin="0,10,0,0">
+                    <Button
+                        x:Name="PositiveButton"
+                        Width="80"
+                        Height="30"
+                        VerticalAlignment="Bottom"
+                        Click="OkButton_Click"
+                        Content="Ok"
+                        IsDefault="True" />
+                    <Button
+                        x:Name="NegativeButton"
+                        Width="80"
+                        Height="30"
+                        VerticalAlignment="Bottom"
+                        Click="CancelButton_Click"
+                        Content="Cancel" />
+                </DockPanel>
             </StackPanel>
 
         </DockPanel>
