--- a/TheForestDSM/Dialogs/MessageDialog.xaml
+++ b/TheForestDSM/Dialogs/MessageDialog.xaml
@@ -27,23 +27,22 @@
                 <TextBlock
                     x:Name="ContentBox"
                     Width="{Binding ContentBoxWidth}"
+                    Background="{Binding Background, ElementName=InfoDialogWindow}"
                     TextWrapping="Wrap" />
                 <DockPanel Margin="0,10,0,0">
                     <Button
                         x:Name="PositiveButton"
-                        Width="80"
-                        Height="30"
                         VerticalAlignment="Bottom"
                         Click="OkButton_Click"
                         Content="Ok"
-                        IsDefault="True" />
+                        IsDefault="True"
+                        Style="{StaticResource MediumButton}" />
                     <Button
                         x:Name="NegativeButton"
-                        Width="80"
-                        Height="30"
                         VerticalAlignment="Bottom"
                         Click="CancelButton_Click"
-                        Content="Cancel" />
+                        Content="Cancel"
+                        Style="{StaticResource MediumButton}" />
                 </DockPanel>
             </StackPanel>
 
